--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <kudu-version>1.13.0</kudu-version>
+    <hadoop-version>2.7.4</hadoop-version>
   </properties>
 
   <build>
@@ -55,7 +56,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.apache.kudu.examples.ScanItemTable</mainClass>
+                  <mainClass>org.apache.kudu.examples.Example</mainClass>
                 </transformer>
               </transformers>
             </configuration>
@@ -104,12 +105,22 @@
       <scope>test</scope>
     </dependency>
 
+    <!--
     <dependency>
-      <groupId>org.apache.kudu</groupId>
-      <artifactId>kudu-binary</artifactId>
-      <version>${kudu-version}</version>
-      <scope>test</scope>
-      <classifier>${os.detected.classifier}</classifier>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>${hadoop-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-auth</artifactId>
+      <version>${hadoop-version}</version>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>${hadoop-version}</version>
     </dependency>
 
     <dependency>
