--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <name>Kudu Java Query on ItemId</name>
 
   <properties>
-    <kudu-version>1.13.0</kudu-version>
+    <kudu-version>1.14.0</kudu-version>
     <hadoop-version>2.7.4</hadoop-version>
   </properties>
 
@@ -65,7 +65,6 @@
       </plugin>
     </plugins>
     <extensions>
-      <!-- Used to find the right kudu-binary artifact with the property os.detected.classifier -->
       <extension>
         <groupId>kr.motd.maven</groupId>
         <artifactId>os-maven-plugin</artifactId>
@@ -73,7 +72,46 @@
       </extension>
     </extensions>
   </build>
-
+<!--
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>org.apache.kudu.examples.Example</mainClass>
+              <classpathPrefix>dep-jars</classpathPrefix>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+-->
   <dependencies>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -88,7 +126,7 @@
     <dependency>
       <groupId>org.apache.kudu</groupId>
       <artifactId>kudu-client</artifactId>
-      <version>${kudu-version}</version>
+      <version>1.15.0</version>
     </dependency>
 
     <!-- For logging messages. -->
@@ -116,6 +154,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.stumbleupon</groupId>
+      <artifactId>async</artifactId>
+      <version>1.4.1</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -141,4 +184,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
