--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,18 @@
       <artifactId>async</artifactId>
       <version>1.4.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient</artifactId>
+      <version>0.10.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_pushgateway</artifactId>
+      <version>0.10.0</version>
+    </dependency>
     <!--
     <dependency>
       <groupId>org.apache.hadoop</groupId>
